<resources>
    <string name="app_name">Climb tracker</string>
    <string name="route_type">Route type</string>
    <string name="route_name">Route name</string>
    <string name="coordinates">Coordinates</string>
    <string name="area">Area</string>
    <string name="sector">Sector</string>
    <string name="comment">Comment</string>
    <string name="edit_attempt">Edit attempt</string>
    <string name="add_attempt">Add attempt</string>

    <string name="max_message">(%1$s)</string>
    <string name="coordinates_format">%1$f, %2$f</string>
    <string name="length">Length in meters</string>
    <string name="location">Location</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="edit_location">Edit Location</string>
    <string name="add_location">Add Location</string>
    <string name="update">Update</string>
    <string name="map_center">Map center</string>
    <string name="delete_attempt_question">Do you really want to delete this attempt?</string>
    <string name="always_show_french_notation">Always show French notation</string>
    <string name="always_show_uuia_notation">Always show UUIA notation</string>
    <string name="always_show_yosemite_decimal_system_notation">Always show Yosemite Decimal System notation</string>
    <string name="try_number">Try number</string>
    <string name="change_date">Change date</string>
    <string name="change_time">Change time</string>
    <string name="one">1</string>
    <string name="augment_try_number">Augment try number</string>
    <string name="reduce_try_number">Reduce try number</string>

    <string-array name="route_type">
        <item>Trad</item>
        <item>Sport</item>
        <item>Indoors</item>
    </string-array>

    <string-array name="climb_styles">
        <item>Lead</item>
        <item>Follow</item>
        <item>Top rope</item>
        <item>Solo</item>
    </string-array>

    <string-array name="outcome">
        <item>Onsight</item>
        <item>Repeat</item>
        <item>Flash</item>
        <item>Redpoint</item>
        <item>Fell/Hung</item>
        <item>Pulled gear</item>
        <item>Unfinished</item>
    </string-array>

    <string-array name="route_characteristic">
        <item>Crimps</item>
        <item>Face</item>
        <item>Overhang</item>
        <item>Pockets</item>
        <item>Slab</item>
        <item>Sloper</item>
        <item>Tufa</item>
    </string-array>
</resources>
