<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/always_show_french"
            android:title="@string/always_show_french_notation"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/always_show_uuia"
            android:title="@string/always_show_uuia_notation"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/always_show_yds"
            android:title="@string/always_show_yosemite_decimal_system_notation"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/export_db"
            android:title="@string/export_data"
            app:showAsAction="never"
    />
</menu>