<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.main.MainFragment">

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_date"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/button_time"
                android:layout_marginEnd="8dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_time"
                app:layout_constraintTop_toTopOf="@+id/button_date"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_route_type"
                android:text="Type"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_date"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_climb_style"
                android:text="Climb style"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/button_route_type"
                app:layout_constraintTop_toTopOf="@+id/button_route_type"
                app:layout_constraintBottom_toBottomOf="@+id/button_route_type"
                app:layout_constraintEnd_toStartOf="@+id/recycle_view_route_grade"
                android:layout_marginEnd="8dp"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:id="@+id/recycle_view_route_grade"
                app:layout_constraintTop_toTopOf="@+id/button_climb_style"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_outcome"
                android:text="Outcome"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_route_type"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_route_name"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/route_name"
                    android:ems="10"
                    android:id="@+id/edit_text_route_name"/>
        </android.support.design.widget.TextInputLayout>

        <RatingBar
                android:id="@+id/rating_bar_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/recycle_view_route_grade"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_coordinates"
                app:layout_constraintTop_toBottomOf="@+id/til_sector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/coordinates"
                    android:ems="10"
                    android:id="@+id/edit_text_coordinates"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_area"
                app:layout_constraintTop_toBottomOf="@+id/til_route_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/area"
                    android:ems="10"
                    android:id="@+id/edit_text_area"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_sector"
                app:layout_constraintTop_toBottomOf="@+id/til_area"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/sector"
                    android:ems="10"
                    android:id="@+id/edit_text_sector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_comment"
                app:layout_constraintTop_toBottomOf="@+id/til_coordinates"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/comment"
                    android:ems="10"
                    android:id="@+id/edit_text_comment"/>
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
